# scotty

crates/lexer/: Cargo.toml  lex.re  unicode.re
crates/lexer/src/: lib.rs  mtag.rs  token.rs
xtask/: Cargo.toml
xtask/src/: main.rs
