[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icu_properties = "0.5.0"
icu_testdata = "0.5.0"
icu_provider = "0.5.0"
icu_uniset = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
phf_codegen = "0.10.0"
